# tinymem

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
dot_claude/: settings.json
dot_claude/hooks/: tinymem-ask-intercept.sh  tinymem-hook.sh  tinymem-start.sh  tinymem-stop.sh
dot_claude/skills/chain-link/: SKILL.md
dot_claude/skills/chain-list/: SKILL.md
dot_claude/skills/chain-load/: SKILL.md
src/: main.rs  mcp.rs  mcp_tools.rs  models.rs  server.rs  store.rs  tui.rs
