[package]
name = "tinymem"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
axum = "0.7"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
ureq = { version = "3.1.4", features = ["json"] }
strsim = "0.11"
chrono = "0.4"
urlencoding = "2"
mupdf = { git = "https://github.com/messense/mupdf-rs.git", version = "0.6.0" }
